[project]
name = "beadhub"
version = "0.2.5"
description = "Multi-agent coordination server for AI teams. Workspace claims, presence, escalations, policies, and Beads integration."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Juan Reyero", email = "juan@juanreyero.com" }
]
requires-python = ">=3.12"
keywords = ["ai", "agents", "coordination", "beads", "mcp", "file-locking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.93.0",
    "httpx>=0.23.0",
    "uvicorn>=0.20.0",
    "typer>=0.6.0",
    "redis>=4.2.0",
    "aiofiles>=25.1.0",
    "pyyaml>=6.0.3",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "pgdbm>=0.4.0",
    "aweb>=0.3.4",
]

[project.urls]
Homepage = "https://github.com/beadhub/beadhub"
Documentation = "https://github.com/beadhub/beadhub#readme"
Repository = "https://github.com/beadhub/beadhub.git"
Issues = "https://github.com/beadhub/beadhub/issues"

[project.scripts]
beadhub = "beadhub:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "frontend/",
    "docs/",
    "scripts/",
    ".beads/",
    ".beadhub-cache/",
    ".claude/",
    ".github/",
    ".env.*",
    "!.env.example",
    "Dockerfile",
    "docker-compose.yml",
    "Makefile",
    "AGENTS.md",
    "CLAUDE.md",
    "*.pyc",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.14.9",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["beadhub"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src", "tests"]
follow_imports = "skip"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
namespace_packages = true
show_error_codes = true
pretty = true
explicit_package_bases = true

exclude = [
    "frontend/",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["beadhub"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "aweb_conformance: black-box conformance tests (skipped unless AWEB_CONFORMANCE=1)",
]
